--- a/app/design/frontend/Codazon/fastest/fashion/Magento_CatalogSearch/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_CatalogSearch/web/css/source/_module.less
@@ -290,6 +290,7 @@
             font-style: unset;
             font-size: 16px;
             line-height: 1.5;
+            font-family: Roboto;
         }
         .control {
             width: 80vw;
